--- a/generators/run/templates/package.json
+++ b/generators/run/templates/package.json
@@ -4,9 +4,10 @@
   "description": "Django website for ubuntu.com",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "sass-lint static/**/*.scss --verbose --no-exit",
     "build": "node-sass --include-path node_modules static/sass --output static/css ",
-    "watch": "node-sass --include-path node_modules --watch --source-map true --recursive static/sass/styles.scss static/css/styles.css"
+    "watch": "node-sass --include-path node_modules --watch --source-map true --recursive static/sass/styles.scss static/css/styles.css",
+    "clean": "rm -rf node_modules yarn-error.log"
   },
   "keywords": [
     "website",
@@ -16,6 +17,7 @@
   "license": "LGPL v3",
   "devDependencies": {
     "node-sass": "^4.10.0",
-    "ubuntu-vanilla-theme": "0.0.35"
+    "ubuntu-vanilla-theme": "0.0.35",
+    "sass-lint": "1.10.2"
   }
 }
