--- a/generators/run/templates/package.json
+++ b/generators/run/templates/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "sass-lint static/**/*.scss --verbose --no-exit",
     "build": "node-sass --include-path node_modules static/sass --output static/css ",
-    "watch": "node-sass --include-path node_modules --watch --source-map true --recursive static/sass/styles.scss static/css/styles.css",
+    "watch": "node-sass --include-path node_modules --source-map true --watch static/sass --output static/css",
     "clean": "rm -rf node_modules yarn-error.log"
   },
   "keywords": [
@@ -16,7 +16,7 @@
   "author": "Canonical webteam",
   "license": "LGPL v3",
   "devDependencies": {
-    "node-sass": "4.5.2",
-    "sass-lint": "1.10.2"
+    "node-sass": "^4.5.3",
+    "sass-lint": "^1.10.2"
   }
 }
