--- a/generators/run/templates/package.json
+++ b/generators/run/templates/package.json
@@ -7,7 +7,7 @@
     "test": "sass-lint static/**/*.scss --verbose --no-exit",
     "build": "node-sass --include-path node_modules static/sass --output static/css",
     "watch": "node-sass --include-path node_modules --source-map true --watch static/sass --output static/css",
-    "clean": "rm -rf node_modules yarn-error.log"
+    "clean": "rm -rf node_modules yarn-error.log static/css"
   },
   "keywords": [
     "website",
@@ -20,3 +20,4 @@
     "sass-lint": "^1.10.2"
   }
 }
+
