--- a/generators/run/templates/package.json
+++ b/generators/run/templates/package.json
@@ -9,7 +9,7 @@
     "node-sass": "^4.5.3",
     "sass-lint": "^1.10.2",
     "postcss-cli": "^4.1.0",
-    "cssnano": "3.10.0",
+    "cssnano": "^3.10.0",
     "watch-cli": "^0.2.2"
   }
 }
