--- a/generators/run/templates/package.json
+++ b/generators/run/templates/package.json
@@ -6,10 +6,11 @@
     "test": "sass-lint static/**/*.scss --verbose --no-exit"
   },
   "dependencies": {
-    "node-sass": "^4.5.3",
-    "sass-lint": "^1.10.2",
-    "postcss-cli": "^4.1.0",
+    "autoprefixer": "^6.3.1",
     "cssnano": "^3.10.0",
+    "node-sass": "^4.5.3",
+    "postcss-cli": "^4.1.0",
+    "sass-lint": "^1.10.2",
     "watch-cli": "^0.2.2"
   }
 }
