Put minified CSS in static/minified
So it's outside the static/css directory, so it doesn't get processed twice by the watch and build steps.

--- a/generators/run/templates/package.json
+++ b/generators/run/templates/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "clean": "rm -rf node_modules yarn-error.log css static/css *.log *.sqlite _site/ build/ .jekyll-metadata .bundle",
     "watch": "watch -p 'static/sass/**/*.scss' -c 'yarn run build'",
-    "build": "node-sass --include-path node_modules static/sass --output static/css && postcss --use autoprefixer --replace 'static/css/**/*.css' && postcss --use cssnano --dir static/css/minified 'static/css/**/*.css'",
+    "build": "node-sass --include-path node_modules static/sass --output static/css && postcss --use autoprefixer --replace 'static/css/**/*.css' && postcss --use cssnano --dir static/minified 'static/css/**/*.css'",
     "test": "sass-lint static/**/*.scss --verbose --no-exit"
   },
   "dependencies": {
