--- a/generators/run/templates/package.json
+++ b/generators/run/templates/package.json
@@ -2,12 +2,11 @@
   "scripts": {
     "clean": "rm -rf node_modules yarn-error.log css static/css *.log *.sqlite _site/ build/ .jekyll-metadata .bundle",
     "watch": "watch -p 'static/sass/**/*.scss' -c 'yarn run build'",
-    "build": "node-sass --include-path node_modules static/sass --output static/css && postcss --use autoprefixer --replace 'static/css/**/*.css' && postcss --use cssnano --dir static/minified 'static/css/**/*.css'",
+    "build": "node-sass --include-path node_modules static/sass --output-style compressed --output static/css && postcss --use autoprefixer --replace 'static/css/**/*.css' && postcss 'static/css/**/*.css'",
     "test": "sass-lint static/**/*.scss --verbose --no-exit"
   },
   "dependencies": {
     "autoprefixer": "9.4.10",
-    "cssnano": "3.10.0",
     "node-sass": "4.11.0",
     "postcss-cli": "6.1.2",
     "sass-lint": "1.12.1",
