Permissive renovate.json
- Group all updates into a single PR
- Auto merge all Python dependencies
- Auto merge all devDependencies
- Auto merge all minor Node dependencies

This is because this project, as it's a template project,
should always be encouraging us to stay on the latest versions
of everything.

--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,21 @@
 {
   "extends": [
     "config:base",
-    "schedule:weekends"
+    "group:all",
+    "schedule:monthly"
   ],
   "packageRules": [
     {
       "languages": ["python"],
-      "extends": [":automergeMinor"]
+      "automerge": true
+    },
+    {
+      "depTypeList": ["devDependencies"],
+      "automerge": true
+    },
+    {
+      "languages": ["node"],
+      "automergeMinor": true
     }
   ]
 }
